# web-scrapper

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  main.py  pyproject.toml
app/components/: data_ingestion.py  data_persistence.py  data_transformation.py  db.py
app/controllers/: controller.py
app/core/: config.py
app/db/: development.db
app/models/: events.py
app/utils/: dependency.py  init_db.py  logging_helper.py
config/: config_common.yaml
